Move to new structure

--- a/test/Soenneker.Libraries.ytdlp.Tests/Soenneker.Libraries.ytdlp.Tests.csproj
+++ b/test/Soenneker.Libraries.ytdlp.Tests/Soenneker.Libraries.ytdlp.Tests.csproj
@@ -31,7 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Libraries.ytdlp.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Libraries.ytdlp.csproj" />
     </ItemGroup>
 
 </Project>
