--- a/src/Soenneker.Libraries.ytdlp.csproj
+++ b/src/Soenneker.Libraries.ytdlp.csproj
@@ -39,7 +39,7 @@
         <None Include="Resources\**\*.*"
               Pack="true"
               PackageCopyToOutput="true"
-              PackagePath="contentFiles/any/any/Resources/%(RecursiveDir)"
+              PackagePath="contentFiles/any/any/Resources/"
               BuildAction="None"/>
     </ItemGroup>
 </Project>
